Correction clignotement des scrollbars

--- a/src/App.less
+++ b/src/App.less
@@ -2,4 +2,5 @@
   color: #000;
   font-family: Arial, Helvetica, sans-serif;
   background: #f9f9f9;
+  overflow: hidden;
 }
